# pico-profile

./: .gitmodules  README.md  workspace.code-workspace
.github/workflows/: cmake.yml  release.yml
Pico-profile-tester/: platformio.ini
Pico-profile-tester/src/: io_pins.cpp  io_pins.h  main.cpp
firmware/: .gitignore  CMakeLists.txt  README.md  pp_config.ini  version.cmake
firmware/FatFs_SPI/: CMakeLists.txt
firmware/FatFs_SPI/ff14a/source/: ffconf.h
firmware/FatFs_SPI/ff14b/source/: ffconf.h
firmware/FatFs_SPI/include/: util.h
firmware/FatFs_SPI/sd_driver/: crc.c  crc.h  hw_config.c  hw_config.h  sd_card.h  sd_spi.h  spi.c  spi.h
firmware/FatFs_SPI/src/: glue.c
firmware/src/: DC42File.cpp  DC42File.hxx  configFile.cpp  configFile.hxx  hw_config.c  io_functions.c  io_functions.cpp  io_functions.h  io_functions.hxx  pico-profile.c  pico-profile.cpp  pico-profile.pio  profileCommand.hxx  protocol.cpp  protocol.h  protocol.hxx  version.hxx
firmware/src/display/: display.cpp  display.hxx  font_5x8.hxx  font_6x13.hxx  hmi.cpp  hmi.hxx  lisa_logo.h
kicad/: Pico-profile-cache.lib  Pico-profile.csv  Pico-profile.kicad_pcb  Pico-profile.kicad_pcb-bak  Pico-profile.pro  Pico-profile.sch  Pico-profile.sch-bak  Pico-profile.xml  fp-info-cache  fp-lib-table  pico-profile-lib.dcm  pico-profile-lib.lib  sym-lib-table
kicad/3d/: 1040310811.step  1040310811.wrl
kicad/IC_Texas Instruments_SN74LVC1G240/: eec.dcm  eec.lib
kicad/IC_Texas Instruments_SN74LVC1G240/eec.pretty/: Texas_Instruments-SN74LVC1G240-Level_A.kicad_mod  Texas_Instruments-SN74LVC1G240-Level_B.kicad_mod  Texas_Instruments-SN74LVC1G240-Level_C.kicad_mod
kicad/RP-Pico Libraries/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD_TH.kicad_mod
kicad/gerbers/: Pico-profile-B_Cu.gbr  Pico-profile-B_Mask.gbr  Pico-profile-B_Paste.gbr  Pico-profile-B_SilkS.gbr  Pico-profile-Edge_Cuts.gbr  Pico-profile-F_Cu.gbr  Pico-profile-F_Mask.gbr  Pico-profile-F_Paste.gbr  Pico-profile-F_SilkS.gbr  Pico-profile-NPTH-drl_map.ps  Pico-profile-NPTH.drl  Pico-profile-PTH-drl_map.ps  Pico-profile-PTH.drl  Pico-profile-job.gbrjob
kicad/logos.pretty/: lisa_logo.kicad_mod
